Remove max-height and set screenshot to flex-start (prevent whitespace at bottom)

--- a/src/styles/components/_app-info.scss
+++ b/src/styles/components/_app-info.scss
@@ -15,7 +15,7 @@
     .screenshot {
         flex: 1 1 500px;
         max-width: 700px;
-        max-height: 800px;
+        align-self: flex-start;
         overflow-y: hidden;
         position: relative;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
